Fixed the contact us scene and fixed some grammatical errors in the text.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,7 +191,7 @@
         \n\t\t\tCape Fear River Watch – created an Urban Rain Garden to manage storm water runoff from headquarters building on Surry St;
         utilized native plants and conservation landscaping techniques to create an education site in front of the building (2007)
         \n\t\t\tLower Cape Fear Historical Society – Restore storm drains at sides of the 1852 Latimer House and improve irrigation (2013)
-        \n\t\t\tNorth Carolina Coastal Federation – Native plants ans shrubs for rain gardens at Bradley Creek and Alderman Elementary Schools (2013)
+        \n\t\t\tNorth Carolina Coastal Federation – Native plants and shrubs for rain gardens at Bradley Creek and Alderman Elementary Schools (2013)
         \n\t\t\tNorth Carolina Land Trust – Supplies for propagation of new plants to restore Venus Flytraps at the Stanley Rehder Carivorous Garden(2013)
 
 
@@ -203,7 +203,7 @@
 
         \n\n\t\t\tAirlie Butterfly Garden – CFGC supplied the funds to landscape the entire area surrounding the new Butterfly Garden at Airlie Gardens .
         \n\t\t\tCape Fear Community College – funds for a greenhouse in which students learn to grow plants (now named the
-        “Cape Fear Garden Club Greenhouse” in our club’s honor for our support).  CFCC is also a partner in landscaping Habitat
+        “Cape Fear Garden Club Greenhouse” in our club’s honor for our support). CFCC is also a partner in landscaping Habitat
         for Humanity homes as a part of their landscaping curriculum
         \n\t\t\tArboretum – Plant additional 45 camellia plants and companion plants in the former specimen and patio garden
         \n\t\t\tThe Davis Community – Create an outdoor destination to draw people from their rooms to experience nature (2013)
@@ -237,7 +237,7 @@
 
         \n\nPHILANTHROPIC:
 
-        \n\t\t\tHabitat for Humanity – for 4 years, we have funded plant materials to landscape homes for this organization;
+        \n\n\t\t\tHabitat for Humanity – for 4 years, we have funded plant materials to landscape homes for this organization;
         CFCC students provide the labor.  Habitat residents undergo a 12 week program to teach them how to own their
         own home and maintain it.
 
@@ -276,7 +276,7 @@
 
         \n\nTHE OBJECTIVES SHALL BE….
 
-        \n\t\t\tTo provide a non-profit, philanthropic, and educational association for the members.
+        \n\n\t\t\tTo provide a non-profit, philanthropic, and educational association for the members.
         \n\t\t\tTo stimulate knowledge and the love of gardening.
         \n\t\t\tTo study, in all its aspects, the art of gardening, particularly horticulture, and to cooperate
         with other agencies furthering such interest.
