--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -446,4 +446,161 @@
         \nQuestions regarding this policy should be directed to Karen Smith, Chairperson of the Azalea Belle
         Committee: karen.smith1309@gmail.com or 910-620-6958.
     </string>
+    <string name="directions">Directions</string>
+    <string name="textview">TextView</string>
+    <string name="get_directions_to_ribbon_cutting_opens_google_maps">
+        Get Directions to Ribbon Cutting
+        \n(Opens Google Maps)
+    </string>
+    <string name="get_directions_to_marker_1">
+        Get Directions to Marker 1
+        \n(Opens Google Maps)
+    </string>
+    <string name="get_directions_to_marker_2">
+        Get Directions to Marker 2
+        \n(Opens Google Maps)
+    </string>
+    <string name="get_directions_to_marker_3">
+        Get Directions to Marker 3
+        \n(Opens Google Maps)
+    </string>
+    <string name="get_directions_to_marker_4">
+        Get Directions to Marker 4
+        \n(Opens Google Maps)
+    </string>
+    <string name="get_directions_to_marker_5">
+        Get Directions to Marker 5
+        \n(Opens Google Maps)
+    </string>
+    <string name="get_directions_to_marker_6">
+        Get Directions to Marker 6
+        \n(Opens Google Maps)
+    </string>
+    <string name="get_directions_to_marker_7">
+        Get Directions to Marker 7
+        \n(Opens Google Maps)
+    </string>
+    <string name="get_directions_to_marker_8">
+        Get Directions to Marker 8
+        \n(Opens Google Maps)
+    </string>
+    <string name="get_directions_to_marker_9">
+        Get Directions to Marker 9
+        \n(Opens Google Maps)
+    </string>
+    <string name="get_directions_to_marker_10">
+        Get Directions to Marker 10
+        \n(Opens Google Maps)
+    </string>
+    <string name="get_directions_to_marker_11">
+        Get Directions to Marker 11
+        \n(Opens Google Maps)
+    </string>
+    <string name="get_directions_to_marker_12">
+        Get Directions to Marker 12
+        \n(Opens Google Maps)
+    </string>
+    <string name="back_to_the_map">Back to the Map</string>
+    <string name="about">Info About Ribbon Cutting</string>
+    <string name="about1">Info About Marker 1</string>
+    <string name="about2">Info About Marker 2</string>
+    <string name="about3">Info About Marker 3</string>
+    <string name="about4">Info About Marker 4</string>
+    <string name="about5">Info About Marker 5</string>
+    <string name="about6">Info About Marker 6</string>
+    <string name="about7">Info About Marker 7</string>
+    <string name="about8">Info About Marker 8</string>
+    <string name="about9">Info About Marker 9</string>
+    <string name="about10">Info About Marker 10</string>
+    <string name="about11">Info About Marker 11</string>
+    <string name="about12">Info About Marker 12</string>
+    <string name="rc_marker">
+        Tom &amp; Kate Fetzer
+        \n6417 Quail Run Road
+        \n919-280-9184
+        \ntom@fetzerlee.com
+    </string>
+    <string name="marker_1">
+        Dr. Jeff Warhaftig &amp; Dr. Amanda Trimpey
+        \n6315 Old Military Road
+        \n910-200-8516 Amanda
+        \ntrimpey@earthlink.net
+    </string>
+    <string name="marker_2">
+        James &amp; Frances Parnell
+        \n6451 Quail Run Road
+        \n910-791-1365
+        \nfbparnell1937@gmail.com
+    </string>
+    <string name="marker_3">
+        Airlie Gardens (Lebanon Chapel also included with Airlie)
+        \n300 Airlie Road
+        \nRebecca Pearce
+        \n910-256-5083
+        \nrpearce@nhcgov.com
+        \n
+        \nRandy Inge    (Contact for Lebanon Chapel)
+        \n829 S. Mooring Drive
+        \nWilmington, NC  28405
+        \n804-839-8492
+        \nrandybinge@gmail.com
+    </string>
+    <string name="marker_4">
+        Garden Duo
+        \nChris Gore &amp; Matthew Tenhuisen (Josephine)
+        \n510 Grace Street
+        \n512 Grace Street
+        \n910-262-5391
+        \nc.l.gore@hotmail.com
+    </string>
+    <string name="marker_5">
+        Scotty &amp; Kenton Sanders
+        \n1710 Chestnut Street
+        \n910-616-3637
+        \nMurphythehorse@gmail.com
+    </string>
+    <string name="marker_6">
+        Karen &amp; Auley Crouch
+        \n1708 Chestnut Street
+        \n910-762-2383
+        \nkaren@karenpadencrouch.com
+    </string>
+    <string name="marker_7">
+        Donna Launey &amp; Patrick Tester
+        \n1711 Princess Street
+        \n503-730-4401
+        \nDonnalauney@icloud.com
+    </string>
+    <string name="marker_8">
+        Dan Thorpe &amp; Anne Beck
+        \n707 Colonial Drive
+        \n717-752-6496 Dan
+        \n910-632-0221 Anne
+        \nmanagerthorpelandscapes@gmail.com
+    </string>
+    <string name="marker_9">
+        Erin &amp; Dustin Sullivan
+        \n314 Colonial Drive
+        \n910-547-1937 Erin
+        \nErin@revisonsofwilmington.com
+    </string>
+    <string name="marker_10">
+        Susan Wilson
+        \n5024 Split Rail Road (Johnson Farms)
+        \n910-352-0340
+        \nswilson@ec.rr.com
+    </string>
+    <string name="marker_11">
+        Marcia Doering
+        \n6309 Pin Tail Court (College Acres)
+        \n910-616-3637
+        \nmarcia_doering@yahoo.com
+    </string>
+    <string name="marker_12">
+        Harbor Way Gardens
+        \nNext to Town Hall Wrightsville Beach
+        \nElise Running
+        \n910-612-5872
+        \nesrunning@yahoo.com
+    </string>
 </resources>
