Fix some of the text.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,9 +64,9 @@
         \n\nthis needs to be fixed when I find it.</string>
     <string name="back_to_bird_islands_cruise">Back to Bird Islands Cruise</string>
     <string name="this_box_is_going_to_contain_text_from_battery_island_cruise_and_ticket_info">
-        Mark Your Calendar for the 2019 Cruise
-        \n\t\t\tTickets are $40 and will be available beginning March 1 at Wild Bird and Garden
-        located in Wilmington at Hanover Center and also in Southport.
+        Mark Your Calendar for the 2020 Cruise
+        \n\t\t\tThe Bird Cruise is The Battery Island/Birds of the Lower Cape Fear Cruise on Sunday,
+        May 17, 2020. Tickets go on sale February 26, 2020.
 
         \n\nThe cruise is an educational experience and viewing is narrated by three experts
         who will share their knowledge with us:
@@ -87,14 +87,9 @@
         \n\nAdditional information is available by emailing birdislandscruise@capefeargardenclub.org
         \nWhen and Where:
 
-        \n\nSunday, May 19, 2019
-        \nBoarding: 12:30 pm
-        \nDeparting: 1:00 pm
-        \nReturn: Approx 5:30 pm
-
-        \n\nDeparting from Carolina Beach Marina on the Royal Winner Princess II
-
-        \n\nAddress: 100 Carl Winner Ave, Carolina Beach, NC
+        \n\nSunday, May 17, 2020
+        \nBoarding: 10:30 am
+        \nDeparting: 11:00 am
     </string>
     <string name="this_box_is_going_to_contain_information_from_the_club_theme_page_on_website">This box is going to contain information from the Club theme page on website.</string>
     <string name="community_projects">Community Projects</string>
@@ -361,90 +356,106 @@
     <string name="asd">asd</string>
     <string name="edit_name">Edit Name</string>
     <string name="this_box_is_going_to_contain_text_from_azalea_belles_website_photos_policies_and_belle_application_info">
-        Azalea Belle Policies and Application Information
-        \n2019 Azalea Belle Application Information
+        Belle Mission Statement
 
-        \n\nApplications for the 2019 Cape Fear Garden Club, Inc. Azalea Belles © will be available to high school
-        juniors and seniors on January 23, 2019 from members of the Cape Fear Garden Club (CFGC) or the Azalea
-        Belle Committee. Young ladies desiring to become a Belle should contact a member of the CFGC to ask
-        if they will sponsor you and help you complete an application. Juniors must have a CFGC member sponsor.
-        For Seniors ONLY: If you do not know a CFGC member, you may go to 1309 Honor Lane at 4:00 PM on
-        January 23rd. to be interviewed by the Belle Committee and receive an application from them. Please refer
-        to the Azalea Belle policy as posted on this website. Belle Applications for 2019 closed at midnight on January 30th.
-        \nAZALEA BELLE POLICIES (adopted 2006; revised 2018)
+        \n\n\t\t\tThe Cape Fear Garden Club, Inc. Azalea Belles© serve as ambassadors for
+        The Cape Fear Garden Club, Inc., the North Carolina Azalea Festival and the City
+        of Wilmington. This is a diverse group of young women dressed in colorful gowns
+        that complement the blooms and surrounding landscapes of Wilmington, greet visitors
+        to the Cape Fear Garden Club Azalea Garden Tour©, and participate in other events
+        related to the North Carolina Azalea Festival.
 
-        \n\nCFGC Belle Mission Statement: The Cape Fear Garden Club, Inc. Azalea Belles © serve as ambassadors
-        for The Cape Fear Garden Club Inc., the North Carolina Azalea Festival and the City of Wilmington.
-        This is a diverse group of young women dressed in colorful gowns that complement the blooms and surrounding
-        landscapes of Wilmington, greet visitors to the Cape Fear Garden Club Azalea Garden Tour©, and participate
-        in other events related to the North Carolina Azalea Festival.
+        \n\n1. The Azalea Belle Committee is composed of members of The Cape Fear Garden Club.
 
-        \n\n1. The Azalea Belle Committee is composed of members of The Cape Fear Garden Club, Inc.
+        \n\n2. The purpose of the Azalea Belle Committee is to assist the Belle Chairperson
+        with the initial contacting of the Belles, the dress fittings, the tea, the rehearsal,
+        the ribbon cutting, and any other activities in which assistance is needed.
 
-        \n\n2. The purpose of the Azalea Belle Committee is to assist the Belle Chairmen with the initial contacting of
-        the Belle, the dress fittings, the tea, the rehearsal, the ribbon cutting, and any other activities in which assistance is needed.
+        \n\n3. Applications for 2020 Belles will be made available to junior and senior girls
+        ON LINE ONLY starting November 20, 2019 and will close at midnight December 20, 2019.
 
-        \n\n3. The Belle applications will be distributed each year at the January meeting of the Cape Fear Garden
-        Club to members of the Cape Fear Garden Club.
+        \n\n4. Cape Fear Garden Club members may sponsor no more than 3 young ladies who meet
+        the criteria* specified on the Belle information sheet attached to the application.
+        Sponsors are responsible for informing the Belle and her parents of her responsibilities
+        to the CFGC.
 
-        \n\n4. Cape Fear Garden Club members may sponsor no more than 3 young ladies who meet the criteria*
-        specified on the Belle information sheet attached to the application. Sponsors are responsible for informing
-        the Belle and her parents of her responsibilities to the Garden Club.
+        \n\n5. Senior girls who wish to be Belles and do not have a Garden Club sponsor may
+        apply through the Belle Chairperson. Her sponsor will be listed as “committee sponsored”.
+        This policy allows more girls to have this opportunity and it helps us to be more diverse.
+        ALL JUNIOR APPLICANTS MUST have a Garden Club sponsor for their application to be accepted
+        – NO EXCEPTIONS (any junior who wishes to apply but cannot find a Garden Club sponsor may
+        reapply through the Belle Committee or through a Garden Club sponsor her senior year).
 
-        \n\n5. Senior girls who wish to be Belles and do not have a garden club sponsor may apply through the
-        Belle Chairmen. Her sponsor will be listed as “committee sponsored.” This policy allows more girls to
-        have this opportunity and it helps us to be more diverse. ALL JUNIOR APPLICANTS MUST have a
-        garden club sponsor for their application to be accepted – NO EXCEPTIONS (any junior who wishes
-        to apply but cannot find a garden club sponsor may reapply through the Belle Committee or through
-        a garden club sponsor her senior year).
+        \n\n6. The Belle Chairperson will determine the number of Belles needed for each garden
+        tour based on the sizes of the gardens. The number may vary from year-year.
+        In other words, there is no set number.
 
-        \n\n6. The Belle Chairmen will determine the number of Belles needed for each garden tour based on
-        the sizes of the gardens. The number may vary from year to year. In other words, there is no set number.
+        \n\n7. Belle applications must be mailed to the address listed on the application and
+        they must be postmarked by the date listed. Applications received after the set postmark
+        date will not be considered. NO EXCEPTIONS!
 
-        \n\n7. Belle applications must be mailed to the address listed on the application and they must be
-        postmarked by the date listed on the application. Applications received after the set postmark date
-        will not be considered. NO EXCEPTIONS!
+        \n\n8. Belle selection will be conducted by the Belle Committee Co-Chairpersons
+        using the following guidelines:
 
-        \n\n8. Belle selection will be conducted by the Belle committee chairs using the following guidelines:
+        \n\n\t\t\ta. Daughters and granddaughters of CFGC members will be given first
+        priority regardless of where the young lady resides.
 
-        \n\n\t\t\ta. Daughters and granddaughters of CFGC members will be given first priority regardless of where the
-        girl resides. High school seniors who attend school or reside in New Hanover County. High school juniors who
-        attend school or reside in New Hanover County. If there are more junior applications than slots available after
-        placing the above, a random lottery will be conducted from the junior applicants by the Belle Chairmen. (We
-        are no longer accepting any sophomore applications due to the numbers of juniors and seniors applying each year.)
+        \n\n\t\t\tb. High school seniors who attend school or reside in New Hanover County.
 
-        \n\n\t\t\tb. Young ladies of appropriate age from surrounding counties may apply, but their applications
-        will not be given priority over any of the above.
+        \n\n\t\t\tc. High school juniors who attend school or reside in New Hanover County.
+        If there are more junior applications than slots available after placing the above,
+        a random lottery will be conducted from the junior applicants by the Belle Chairperson.
+        (We are no longer accepting any sophomore applications due to the number of juniors
+        and seniors applying each year.)
 
-        \n\n9. The Belle Chairmen will mail acceptance letters to the young ladies who are selected.
-        Letters of regret will be mailed to those not selected. If a young lady is not selected, she will have to go
-        through the application process again the following year if she is eligible and wishes to be considered.
+        \n\n\t\t\td. Young ladies of appropriate age from surrounding counties may apply,
+        but their applications will not be given priority over any of the above.
+
+        \n\n9. The Belle Chairperson will mail acceptance letters to the young ladies who
+        are selected. Letters of regret will be mailed to those not selected.
+
+        \n\n\t\t\tIf a young lady is not selected, she will have to go through the
+        application again the following year if she is eligible and wishes to be considered.
         We do not keep a waiting list.
 
-        \n\n10. The Belle Chairmen will select the Belles who will participate in the special activities.
-        (Examples: trip to Raleigh, photo shoots for publicity, parade floats, the Queen’s arrival, etc.)
-        When possible, daughters and granddaughters will be considered for these activities. It is not
-        always possible or fair to always place only daughters and granddaughters in all the special activities.
+        \n\n10. The Belle Co-Chairpersons will select the Belles who will participate in
+        the special activities. (Examples: trip to Raleigh, photo shoots for publicity,
+        parade floats, the Queen's arrival, etc.) When possible, daughters and granddaughters
+        will be considered for these activities. It is not possible or fair to always place
+        only daughters and granddaughters in all the special activities.
 
-        \n\n11. The dressmakers for the Belles are secured by the chairmen annually. The chairmen
-        and the dressmakers will determine the dates for the fittings. Committee members will assist
-        with the fittings. If a Belle has her own gown or would like to have her own gown made by someone
-        other than the designated dressmakers, she will have to have the pattern and fabric approved by the Belle Chairmen.
+        \n\n11. The dressmakers for the Belles are secured by the Chairperson annually.
+        The Chairperson and the dressmakers will determine the dates for the fittings.
+        Committee members will assist with the fittings. If a Belle has her own gown or
+        would like to have her own gown made by someone other than the designated dressmakers,
+        she will have to have the pattern and fabric approved by the Belle Chairperson.
 
-        \n\n12. These policies will remain in effect until the committee decides changes need to be made.
+        \n\n12. These policies will remain in effect until the committee decides changes
+        need to be made.
 
-        \n\n*Criteria:
+        \n\n* Criteria:
 
-        \n\n\t\t\tApplications are accepted from young ladies who are in the 11th or 12th grade and who reside in or attend school
-        in New Hanover County. Applications from surrounding counties are accepted, but are not given priority over New Hanover
-        County applicants. (Daughters and granddaughters of CFGC members may reside out of town.)
-        \n\t\t\tA young lady may only serve as a Belle one year.
-        \n\t\t\tA young lady who wishes to be a Belle may not participate in the Azalea Festival Scholarship Pageant
-        in the same year she serves as a Belle.
+        \n\n· Applications are accepted from young ladies who are in the 11th or 12th
+        grade and who reside in or attend school in New Hanover County. Applications
+        from surrounding counties are accepted, but are not given priority over New Hanover
+        County applicants. (Daughters and granddaughters of CFGC members may reside out
+        of the county.)
+        \n· A young lady may only serve as a Belle one year.
+        \n· A young lady who wishes to be a Belle may not participate in the Azalea
+        Scholarship Pageant in the same year she serves as a Belle.
 
-        \n\n*************************
-        \nQuestions regarding this policy should be directed to Karen Smith, Chairperson of the Azalea Belle
-        Committee: karen.smith1309@gmail.com or 910-620-6958.
+
+        \n\n\nPlease direct any questions regarding this to:
+
+        \n\nKaren Smith, Chairperson of the Azalea Belle Committee
+
+        \n\nKaren.Smith1309@gmail.com or 910-620-6958.
+
+
+
+        \n\n\n\nUpdated information concerning The Cape Fear Garden Club, Inc. Azalea
+        Belles© may be found on the website of The Cape Fear Garden Club at
+        capefeargardenclub.org and on Facebook at www.facebook.com/AzaleaBelles
     </string>
     <string name="directions">Directions</string>
     <string name="textview">TextView</string>
@@ -516,25 +527,25 @@
     <string name="about12">Info About Marker 12</string>
     <string name="rc_marker">
         Tom &amp; Kate Fetzer
-        \n6417 Quail Run Road
+        \n6417 Quail Run Road 28409
         \n919-280-9184
         \ntom@fetzerlee.com
     </string>
     <string name="marker_1">
         Dr. Jeff Warhaftig &amp; Dr. Amanda Trimpey
-        \n6315 Old Military Road
+        \n6315 Old Military Road 28409
         \n910-200-8516 Amanda
         \ntrimpey@earthlink.net
     </string>
     <string name="marker_2">
         James &amp; Frances Parnell
-        \n6451 Quail Run Road
+        \n6451 Quail Run Road 28409
         \n910-791-1365
         \nfbparnell1937@gmail.com
     </string>
     <string name="marker_3">
         Airlie Gardens (Lebanon Chapel also included with Airlie)
-        \n300 Airlie Road
+        \n300 Airlie Road 28403
         \nRebecca Pearce
         \n910-256-5083
         \nrpearce@nhcgov.com
@@ -547,58 +558,60 @@
     </string>
     <string name="marker_4">
         Garden Duo
-        \nChris Gore &amp; Matthew Tenhuisen (Josephine)
-        \n510 Grace Street
-        \n512 Grace Street
+        \nChris Gore &amp; Matthew TenHuisen
+        \n512 Grace Street 28401
         \n910-262-5391
         \nc.l.gore@hotmail.com
+        \nJosephine TenHuisen
+        \n510 Grace Street 28401
     </string>
     <string name="marker_5">
         Scotty &amp; Kenton Sanders
-        \n1710 Chestnut Street
-        \n910-616-3637
+        \n1710 Chestnut Street 28405
+        \n828-493-0320
         \nMurphythehorse@gmail.com
     </string>
     <string name="marker_6">
         Karen &amp; Auley Crouch
-        \n1708 Chestnut Street
+        \n1708 Chestnut Street 28405
         \n910-762-2383
         \nkaren@karenpadencrouch.com
     </string>
     <string name="marker_7">
         Donna Launey &amp; Patrick Tester
-        \n1711 Princess Street
+        \n1711 Princess Street 28405
         \n503-730-4401
         \nDonnalauney@icloud.com
     </string>
     <string name="marker_8">
         Dan Thorpe &amp; Anne Beck
-        \n707 Colonial Drive
+        \n707 Colonial Drive 28403
         \n717-752-6496 Dan
         \n910-632-0221 Anne
         \nmanagerthorpelandscapes@gmail.com
     </string>
     <string name="marker_9">
         Erin &amp; Dustin Sullivan
-        \n314 Colonial Drive
+        \n314 Colonial Drive 28403
         \n910-547-1937 Erin
         \nErin@revisonsofwilmington.com
     </string>
     <string name="marker_10">
         Susan Wilson
-        \n5024 Split Rail Road (Johnson Farms)
+        \n5024 Split Rail Drive 28412 (Johnson Farms)
         \n910-352-0340
         \nswilson@ec.rr.com
     </string>
     <string name="marker_11">
         Marcia Doering
-        \n6309 Pin Tail Court (College Acres)
+        \n6309 Pintail Court 28403 (College Acres)
         \n910-616-3637
         \nmarcia_doering@yahoo.com
     </string>
     <string name="marker_12">
         Harbor Way Gardens
         \nNext to Town Hall Wrightsville Beach
+        \nSeawater Lane, Wrightsville Beach 28480
         \nElise Running
         \n910-612-5872
         \nesrunning@yahoo.com
