--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,7 +128,7 @@
     <string name="grants">Grants</string>
     <string name="this_box_is_going_to_contain_information_from_the_community_projects_page_on_website">
         For over 50 years, the Azalea Garden Tour, sponsored by Cape Fear Garden Club, has proudly
-        returned thousands of dollars to New Hanover County. Tour profits Money available to beautify,
+        returned hundreds of thousands of dollars to New Hanover County. Tour profits are granted to beautify,
         conserve, educate, inspire, and contribute to people of all ages using horticulture and garden
         development.
 
@@ -178,7 +178,7 @@
         \nUniversity of North Carolina Wilmington Scholarship
     </string>
     <string name="this_box_is_going_to_contain_information_from_the_endowment_history_page_on_website">
-        \t\t\tFor almost 90 years the Cape Fear Garden Club has worked to enhance and support
+        For almost 90 years the Cape Fear Garden Club has worked to enhance and support
         the natural beauty of Wilmington. In 2011, we created the Cape Fear Garden Club
         Beautification Endowment to create perpetual funding to promote wide scale enhancement
         and maintenance of the landscapes of our city gateways, medians, byways and public
@@ -192,8 +192,8 @@
         \n\n\t\t\tChildren’s Museum – Secret Garden off Orange Street in which area residents,
         visitors and tourists can rest and relax
         \n\t\t\tCarolina Beach – enhancement of the “Town Gazebo”, central to this community
-        \n\t\t\tSchools: Wilmington Christian, NHHS, Hoggard, Forest Hills Elementary, CFCC,
-        Roland Grise Middle, Isaac Bear, Friends School, Gregory Elementary, Lake Forest Academy,
+        \n\t\t\tSchools: Wilmington Christian, New Hanover HS, Hoggard HS, Forest Hills Elementary, CFCC,
+        Roland Grise Middle, Isaac Bear HS, Friends School, Gregory Elementary, Lake Forest Academy,
         St Mary’s, Wrightsville Beach Elementary, Noble Middle and Holly Tree Elementary
         \n\t\t\tJuvenile Day Treatment Center – gateway to Wilmington along side of this building
         \n\t\t\tKure Beach – enhancement of areas surrounding city signs
@@ -211,7 +211,7 @@
 
         \n\nCONSERVATION:
         \nSupports the CFGC’s ongoing project at Battery Island which was just increased from $4000 to $6000
-        awarded each year.  This is a partnership with the Audubon Society with Walker Goldman and includes
+        awarded each year.  This is a partnership with the Audubon Society and includes
         a bi-annual cleanup with plantings of Yaupon shrubs which help provide nesting sites for coastal birds,
         in particular the White Ibis which has one of its largest nesting sites right here at Battery Island.
         Other recent conservation grant projects have included:
@@ -222,13 +222,13 @@
         utilized native plants and conservation landscaping techniques to create an education site in front of the building (2007)
         \n\t\t\tLower Cape Fear Historical Society – Restore storm drains at sides of the 1852 Latimer House and improve irrigation (2013)
         \n\t\t\tNorth Carolina Coastal Federation – Native plants and shrubs for rain gardens at Bradley Creek and Alderman Elementary Schools (2013)
-        \n\t\t\tNorth Carolina Land Trust – Supplies for propagation of new plants to restore Venus Flytraps at the Stanley Rehder Carivorous Garden(2013)
+        \n\t\t\tNorth Carolina Land Trust – Supplies for propagation of new plants to restore Venus Flytraps at the Stanley Rehder Carivorous Garden (2013)
 
         \n\nEDUCATIONAL:
         \nMultiple grant awards have gone to schools and organizations for the purpose of educating
         people about how to use plants for conservation, food, landscaping, attracting wildlife, etc.
 
-        \n\n\t\t\tAirlie Butterfly Garden – CFGC supplied the funds to landscape the entire area surrounding the new Butterfly Garden at Airlie Gardens .
+        \n\n\t\t\tAirlie Butterfly Garden – CFGC supplied the funds to landscape the entire area surrounding the new Butterfly Garden at Airlie Gardens.
         \n\t\t\tCape Fear Community College – funds for a greenhouse in which students learn to grow plants (now named the
         “Cape Fear Garden Club Greenhouse” in our club’s honor for our support). CFCC is also a partner in landscaping Habitat
         for Humanity homes as a part of their landscaping curriculum
@@ -243,10 +243,10 @@
         \n\t\t\tCommunities in Schools – this center for at-risk youth will design, implement and maintain a flower and vegetable
         garden and hopefully sell the products at the Farmer’s Market downtown
         \n\t\t\tYahweh Center – working garden of flowers, herbs and vegetables including a greenhouse for hands on learning for children
-        \n\t\t\tJT Hoggard – shade garden and education for Horticultural students in implementation and maintenance
+        \n\t\t\tJT Hoggard HS – shade garden and education for Horticultural students in implementation and maintenance
         \n\t\t\tBellamy Elementary Garden Club – flower beds to be used in education and to improve self esteem
-        \n\t\t\tNHHS – English as a second Language Students will install and maintain senior courtyard plantings
-        \n\t\t\tLaney Highschool – Senior class garden, provide mulch and plantings (2013)
+        \n\t\t\tNew Hanover HS – English as a second Language Students will install and maintain senior courtyard plantings
+        \n\t\t\tLaney HS – Senior class garden, provide mulch and plantings (2013)
 
         \n\nINSPIRATION AND MEMORIALS:
         \n\t\t\tLower Cape Fear Hospice received monies to help with a 3 phase project for gardens on the property that will be
@@ -254,20 +254,20 @@
         a grant to cover all the plantings for new courtyards created as part of the campaign to expand the Pavilion
         \n\t\t\tUNCW students applied for and received a grant to beautify an area on campus and create a memorial garden
         for students and faculty who have died
-        \n\t\t\tAshley High School TrrM Society – memorial garden
+        \n\t\t\tAshley HS TrrM Society – memorial garden
         \n\t\t\tLittle Chapel on the Boardwalk – Biblical Garden established on their property off “The Loop” – also educational
         as to plant materials found in the Old Testament
         \n\t\t\tWilmington Firefighters’ Memorial – Purchase materials for the irrigation system, a load of topsoil and perennials
         for the garden (2013)
 
         \n\nPHILANTHROPIC:
-        \n\t\t\tHabitat for Humanity – for 4 years, we have funded plant materials to landscape homes for this organization;
+        \n\t\t\tHabitat for Humanity – we have funded plant materials to landscape homes for this organization;
         CFCC students provide the labor.  Habitat residents undergo a 12 week program to teach them how to own their
         own home and maintain it.
 
         \n\nENDOWED SCHOLARSHIPS:
         \n\t\t\tCape Fear Community College
-        \n\t\t\tUniversity of North Carolina, Wilmington
+        \n\t\t\tUniversity of North Carolina at Wilmington
     </string>
     <string name="contact_us">Contact Us</string>
     <string name="this_box_is_going_to_contain_text_from_history_page_and_purpose_pages_from_website">
